fix(theme): fix page title spacing

--- a/packages/theme/src/client/styles/page-title.scss
+++ b/packages/theme/src/client/styles/page-title.scss
@@ -6,7 +6,7 @@
 
     position: relative;
     z-index: 1;
-    padding-top: 0 !important;
+    padding-top: 0.5rem !important;
     padding-bottom: 0 !important;
 
     h1 {
